--- a/minesweeper.css
+++ b/minesweeper.css
@@ -70,3 +70,22 @@ body {
     background-color: lightgray;
     border: none;
 }
+
+input {
+    width: 55px;
+    height: 15px;
+    font-size: 15px;
+    border: 10px solid balck;
+    background-color: whitesmoke;
+    margin-left: 10px;
+}
+
+#start-button {
+    width: 150px;
+    height: 40px;
+    font-size: large;
+    color: blueviolet;
+    background-color: lavender;
+    margin-left: 10px;
+
+}
