--- a/minesweeper.css
+++ b/minesweeper.css
@@ -5,24 +5,21 @@ body {
 }
 
 #board {
-    width: 400px;
-    height: 400px;
     border: 10px solid darkgray;
     background-color: lightgray;
 
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
+    margin: auto;
+    border-spacing: 0px;
 }
 
-#board div {
-    width: 48px;
-    height: 48px;
+.tile {
+    width: 0.3in;
+    height: 0.3in;
     border: 1px solid whitesmoke;
+    background-color: lightgray;
 
     /* text */
-    font-size: 30px;
-    display: flex;
+    font-size: 0.2in;
     justify-content: center;
     align-items: center;
 }
