--- a/minesweeper.css
+++ b/minesweeper.css
@@ -24,8 +24,24 @@ body {
     align-items: center;
 }
 
+.tile-flagged {
+    background-image: url("flag.png");
+    background-size: contain;
+}
+
 .tile-clicked {
     background-color: darkgray;
+}
+
+.tile-bomb {
+    background-image: url("bomb.png");
+    background-size: contain;
+    background-color: red;
+}
+
+.tile-wrong-bomb {
+    background-image: url("wrong-bomb.png");
+    background-size: contain;
 }
 
 .x1 {
@@ -63,7 +79,7 @@ body {
 #flag-button {
     width: 100px;
     height: 50px;
-    font-size: 30px;
+    font-size: 45px;
     background-color: lightgray;
     border: none;
 }
